<resources>
    <string name="app_name">Voice Plus Mobile Solution</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">Professional Repair, Online Mobile Shop And Accessories</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_header_title">Voice Plus Mobile</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_repair_gallery">Repair Gallery</string>
    <string name="menu_services">Services</string>
    <string name="menu_pricing">Pricing</string>
    <string name="menu_feed_back">Contact Us</string>
    <string name="menu_book_repair">Book Your Repair</string>
    <string name="menu_login">Login</string>
    <string name="text_home_top_heading">Voice Plus Repairing &amp; Services</string>
    <string name="home_book_me">Book My Repair</string>
    <string name="home_string_one">Quick and Affordable Smart Phone Repairs</string>
    <string name="home_text_two">Why Voice Plus Mobile?</string>
    <string name="home_text_three">Our aim is to offer outstanding services straight to your home or to your office to conduct repair works or troubleshoot your smart phones. For us, the repair work is not just about finding the fault and fixing it, it is about quality parts that are made to last long. We make sure that each of the parts used for repairing are brand new and of the highest quality</string>
    <string name="home_warranty_head">3 Months Warranty</string>
    <string name="home_warranty_detail">We offer warranty upto 3 months on all LCD replacements.</string>
    <string name="dummy_image_content_description">Icon</string>
    <string name="no_fix_no_fee">No Fix, No Fee</string>
    <string name="no_fix_details">We won\'t ask ever for upfront payment. You\'ll only pay once your device is fixed!</string>
    <string name="circle">Circle</string>
    <string name="months_warranty">3 Months Warranty</string>
    <string name="months_warranty_details">We offer warranty upto 3 months on all LCD replacements.</string>
    <string name="hours_repair">"48 Hours Repair* "</string>
    <string name="hours_repair_details">Flat two day repair for Touch/LCD replacement on selected models.</string>
    <string name="experienced_staff">"Experienced Staff "</string>
    <string name="experienced_staff_details">Our technicians are certified and carry years of smart phone repair experience.</string>
    <string name="free_pick_and_drop_details"><![CDATA[We offer free pickup & drop anywhere in Rawalpindi.]]></string>
    <string name="free_pick_and_drop"><![CDATA["Free Pickup & Drop "]]></string>
    <string name="data_security_details">Complete Data security. Avail our free cloud backup and secure your data.</string>
    <string name="data_security">"Data Security* "</string>
    <string name="hint_enter_phone_number">Enter your phone number.</string>
    <string name="register_your_account">Register your account</string>
    <string name="title_activity_profile">Profile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="mode_name">Mode Name</string>
    <string name="add_new_order">Add New Order</string>
    <string name="manage_order">Manage Order</string>
    <string name="action_profile">Profile</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="type_text">Type your message</string>

    <string name="manage_item">Manage Item</string>
    <string name="chat_box">Chat Box</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="bank_account">Bank Account</string>
    <string name="feedback">Feedback</string>
    <string name="log_out">Log out</string>
    <string name="smoocb_api">5f21eb136eb68a000ddebf39</string>
    <string name="payment">Payment</string>
    <string name="login_account">Login Account</string>
    <string name="repair_gallery">Repair Gallery</string>
    <string name="product_pricing">Product Pricing</string>
    <string name="register_account">Register Account</string>
    <string name="profile_info">Profile Info</string>
    <string name="book_my_repair">Book My Repair</string>
    <string name="feed_back">Feed Back</string>
    <string name="edit_item">Edit Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="product_image">Product Image</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">Product Price</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="part_product_name">Part/product Name</string>
    <string name="enter_mobile_model">Enter Mobile Model</string>
    <string name="mobile_model">Mobile Model</string>
    <string name="enter_mobile_brand">Enter Mobile Brand</string>
    <string name="mobile_company">Mobile Company</string>

</resources>