<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item"
            android:icon="@drawable/manageitem"
            android:title="@string/manage_item" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/manageorder"
            android:title="@string/manage_order" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/chatboxx"
            android:title="@string/chat_box" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/manageprofilee"
            android:title="@string/manage_profile" />

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/bank"
            android:title="@string/bank_account" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/feedback"
            android:title="@string/feedback" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_login"
            android:title="@string/log_out" />
    </group>

</menu>