<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.iteam.voiceplusmobile.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.iteam.voiceplusmobile.ui.gallery.GalleryFragment"
        android:label="@string/repair_gallery"
        tools:layout="@layout/fragment_gallery" />


    <fragment
        android:id="@+id/nav_login"
        android:name="com.iteam.voiceplusmobile.ui.login.user_login.LoginFragment"
        android:label="@string/login_account"
        tools:layout="@layout/fragment_login" />


    <fragment
        android:id="@+id/nav_services"
        android:name="com.iteam.voiceplusmobile.ui.services.ServicesFragment"
        android:label="@string/menu_services"
        tools:layout="@layout/fragment_services" />

    <fragment
        android:id="@+id/nav_pricing"
        android:name="com.iteam.voiceplusmobile.ui.pricing.PricingFragment"
        android:label="@string/product_pricing"
        tools:layout="@layout/fragment_services" />


    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.iteam.voiceplusmobile.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_user_register"
        android:name="com.iteam.voiceplusmobile.ui.login.register.RegisterFragment"
        android:label="@string/register_account"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/frag_profile"
        android:name="com.iteam.voiceplusmobile.ui.login.profile.ProfileFragment"
        android:label="@string/profile_info"
        tools:layout="@layout/fragment_register" />
    <fragment
        android:id="@+id/nav_book_repair"
        android:name="com.iteam.voiceplusmobile.ui.bookmyrepair.BookMyRepair"
        android:label="@string/book_my_repair"
        tools:layout="@layout/fragment_book_my_repair" />
    <fragment
        android:id="@+id/nav_chat"
        android:name="com.iteam.voiceplusmobile.ui.chatbox.ChatBoxFragment"
        android:label="@string/chat_box"
        tools:layout="@layout/fragment_chat_box" />

    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.iteam.voiceplusmobile.ui.feedbackreview.feedback"
        android:label="@string/feed_back"
        tools:layout="@layout/fragment_feedback" />

    <fragment
        android:id="@+id/nav_payment"
        android:name="com.iteam.voiceplusmobile.ui.bankpayment.BankPayment"
        android:label="@string/payment"
        tools:layout="@layout/fragment_bank_payment" />

</navigation>